<resources>
    <string name="app_name">BookingBeauty</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bem vindo/a!!!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">A password tem de ter mais de 7 caractéres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="BB_Servicos">Serviços</string>
    <string name="BB_Marcacoes">Marcações</string>
    <string name="BB_Sobre">Sobre</string>
    <string name="BB_Agenda">Agenda</string>
    <string name="BB_NomeServicos">Nome do serviço</string>
    <string name="BB_Duracao">Duração</string>
    <string name="BB_Preço">Preço</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_adicionar_servico">AdicionarServico</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="BB_adicionar">Adicionar</string>
    <string name="BB_editar">Editar</string>
    <string name="BB_Eliminar">Eliminar</string>
    <string name="BB_Selecione">Selecione os serviços</string>
    <string name="BB_Total">Total: 0€</string>
    <string name="BB_Prosseguir">Prosseguir</string>
    <string name="BB_SelecioneDia">Selecione o dia</string>
    <string name="BB_SelecioneHora">Selecione a hora</string>
    <string name="BB_ConcluirMarcacao">Concluir Marcação</string>
    <string name="BB_MarcacaoSucesso">A sua marcação foi feita com sucesso!</string>
    <string name="BB_AdicionarCalendario">Adicionar marcação ao calendário</string>
    <string name="BB_PaginaInicial">Página Inicial</string>
    <string name="BB_DataInicio">Data Início</string>
    <string name="BB_DataFim">Data Fim</string>
    <string name="BB_Estado">Estado</string>
    <string name="BB_NomeCliente">Nome de Cliente</string>
    <string name="BB_Data">Data</string>
    <string name="BB_HoraInicio">Hora de Início</string>
    <string name="BB_HoraFim">Hora de Fim</string>
    <string name="BB_Nome">Nome</string>
    <string name="BB_QuemSomos">Quem Somos</string>
    <string name="BB_QuemSomosTexto">A Booking Beauty é uma empresa que presta serviços de beleza femininos. Destaca-se através as marcações que são feitas usando a aplicação móvel, por chamada ou pessoalmente.</string>
    <string name="BB_Morada">Morada</string>
    <string name="BB_MoradaTexto">Morada da loja: Av. do Empresário, Campus da Talagueira, Zona do Lazer, 6000-767 Castelo Branco.</string>
    <string name="BB_Direcoes">Direções</string>
    <string name="BB_Contactos">Contactos</string>
    <string name="BB_ContactosTexto">Telemóvel: 912345678\nE-mail: info@bookingbeauty.pt</string>
    <string name="BB_Telemovel">Telemóvel</string>
    <string name="BB_SalvarDados">Salvar Dados</string>
    <string name="BB_Logout">Logout</string>
    <string name="BB_DadosPessoais">Dados Pessoais</string>
    <string name="BB_Entrar">Entrar</string>
    <string name="BB_Registar">Registar</string>
    <string name="BB_NomeNaoAlterado">O nome não foi alterado!!!</string>
    <string name="BB_PassNaoAlterada">A password não foi alterada!!!</string>
    <string name="BB_TelemovelNaoAlterado">O número de telemóvel não foi alterado!!!</string>
    <string name="BB_AlteradoSucesso">Alteração realizada com sucesso!!!</string>
    <string name="BB_CampoObrigatorio">Campo Obrigatório!!!</string>
    <string name="BB_Ola">Olá,</string>
    <string name="BB_TenteNovamente">Tente Novamente!!!</string>
    <string name="BB_OcorreuErro">Ocorreu um erro!!!</string>
    <string name="BB_SemServicosSelec">Sem serviços selecionados!!!</string>
    <string name="BB_SemMarcacoes">Está um pouco vazio por aqui, faça mais marcações!!!</string>
    <string name="BB_AgendaVazia">Não há marcações a apresentar!!!</string>
    <string name="BB_CriarConta">Ainda não possui uma conta? Efetue o seu registo AQUI</string>
    <string name="BB_AutenticacaoFalhada">Autenticação Falhada!!!</string>
    <string name="BB_EmailJaExiste">Já existe este e-mail!!!</string>
    <string name="BB_DadosAlterados">Dados Alterados com sucesso!!!</string>
    <string name="BB_Saudacao">Bem-vindo/a</string>
    <string name="BB_NomeInvalido">Nome inválido</string>
    <string name="BB_NumeroInvalido">Número inválido</string>
</resources>